hphp/hack/test/reserved/enum.php
//// Foo.php
<?hh
enum Foo : int {}

//// Arraykey.php
<?hh
enum Arraykey : int {}

//// Bool.php
<?hh
enum Bool : int {}

//// Callable.php
<?hh
enum Callable : int {}

//// Classname.php
<?hh
enum Classname : int {}

//// Darray.php
<?hh
enum Darray : int {}

//// Dynamic.php
<?hh
enum Dynamic : int {}

//// False.php
<?hh
enum False : int {}

//// Float.php
<?hh
enum Float : int {}

//// Int.php
<?hh
enum Int : int {}

//// Mixed.php
<?hh
enum Mixed : int {}

//// Nonnull.php
<?hh
enum Nonnull : int {}

//// Noreturn.php
<?hh
enum Noreturn : int {}

//// Nothing.php
<?hh
enum Nothing : int {}

//// Null.php
<?hh
enum Null : int {}

//// Num.php
<?hh
enum Num : int {}

//// Parent.php
<?hh
enum Parent : int {}

//// Resource.php
<?hh
enum Resource : int {}

//// Self.php
<?hh
enum Self : int {}

//// String.php
<?hh
enum String : int {}

//// This.php
<?hh
enum This : int {}

//// True.php
<?hh
enum True : int {}

//// Varray.php
<?hh
enum Varray : int {}

//// Void.php
<?hh
enum Void : int {}

//// _.php
<?hh
enum _ : int {}

//// NFoo.php
<?hh
namespace N;
enum Foo : int {}

//// NArraykey.php
<?hh
namespace N;
enum Arraykey : int {}

//// NBool.php
<?hh
namespace N;
enum Bool : int {}

//// NCallable.php
<?hh
namespace N;
enum Callable : int {}

//// NClassname.php
<?hh
namespace N;
enum Classname : int {}

//// NDarray.php
<?hh
namespace N;
enum Darray : int {}

//// NDynamic.php
<?hh
namespace N;
enum Dynamic : int {}

//// NFalse.php
<?hh
namespace N;
enum False : int {}

//// NFloat.php
<?hh
namespace N;
enum Float : int {}

//// NInt.php
<?hh
namespace N;
enum Int : int {}

//// NMixed.php
<?hh
namespace N;
enum Mixed : int {}

//// NNonnull.php
<?hh
namespace N;
enum Nonnull : int {}

//// NNoreturn.php
<?hh
namespace N;
enum Noreturn : int {}

//// NNothing.php
<?hh
namespace N;
enum Nothing : int {}

//// NNull.php
<?hh
namespace N;
enum Null : int {}

//// NNum.php
<?hh
namespace N;
enum Num : int {}

//// NParent.php
<?hh
namespace N;
enum Parent : int {}

//// NResource.php
<?hh
namespace N;
enum Resource : int {}

//// NSelf.php
<?hh
namespace N;
enum Self : int {}

//// NString.php
<?hh
namespace N;
enum String : int {}

//// NThis.php
<?hh
namespace N;
enum This : int {}

//// NTrue.php
<?hh
namespace N;
enum True : int {}

//// NVarray.php
<?hh
namespace N;
enum Varray : int {}

//// NVoid.php
<?hh
namespace N;
enum Void : int {}

//// N_.php
<?hh
namespace N;
enum _ : int {}
